Version 2.4.0 - The river knows.
----------
201?-??-??

	gnazio:
		* Fixed configure of libpng when sh != bash

	iz0bbz:
		* Fix WinSock library version detection with MinGW-w64

	Stu Redman:
		* Display hashing progress in progress bars
		* Assertion from background thread now prints a message and not just closes the app
		* Backtrace (crash or assertion) is written to logfile
		* Fix: disabling protocol obfuscation broke Kad and triggered assertions
		* Fixed "Prompt on exit" preference
		* Fixed country flags for Turkish localization
		* Fixed loading of zipped IP filter (#1674)
		* Fixed showing of shared files to other clients
		* Fixed assertions in CFormat("%p") on 64 bit OS with wx 2.9
		* Boost Asio can now be used as networking layer instead of wxWidgets

--------------------------------------------------------------------------------

Version 2.3.1 - The "unobvious evil date" version.
----------
2011-11-11

	btkaos:
		* Show if a client shares its file list in client view

	freddy77:
		* Various optimizations of memory usage
		* Access files for reading/writing via mapped memory
		  (with custom exception handling)
		* Fix download of files > 1GB on ucLibc
		* Fix autogen.sh under Ubuntu
		* Fixed TCP obfuscation negotiation

	Gnucco:
		* Add option to ed2k link parser to display links in
		  emulecollection
		* Added test case for the CTag class

	GonoszTopi:
		* Various fixes to new colour code
		* Allow user to select display of transfer rates
		* Extendable list-control settings save/load code
		* Drop assumption that last search keyword is a filename
		  extension if length == 3
		* Instead of counting unicode characters in a Kad search now we
		  use the UTF-8 byte count to determine whether the keyword is
		  allowed or not
		* Use actual page size in mmap calls instead of a randomly
		  selected number
		* Fix custom Crypto++ path not shown by configure
		* Make <IMG> tags in aMuleWeb HTML 4.01 conforming
		* Fix HTTP proxy authentication